--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -36,6 +36,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
+  
+  +persist_docs:
+    relation: true
+    columns: true
+
   my_new_project:
     # Applies to all files under models/example/
     example:
