--- a/dbt/models/staging/lego_raw/_lego_raw_sources.yml
+++ b/dbt/models/staging/lego_raw/_lego_raw_sources.yml
@@ -4,6 +4,8 @@ sources:
   - name: lego_raw
     database: "dtc-de-kilian"
     tables:
+      - name: brick_insights_reviews_data
+      - name: brick_insights_reviews_data_pre_2000
       - name: colors
       - name: elements
       - name: inventories
