--- a/dbt/models/staging/lego_raw/base/base_lego_raw__brick_insights_reviews_data.yaml
+++ b/dbt/models/staging/lego_raw/base/base_lego_raw__brick_insights_reviews_data.yaml
@@ -31,3 +31,6 @@ models:
       - name: rating_converted
         description: >
           The rating of the set converted to a 100 point scale.
+
+      - name: author_name
+        description: The name of the review's author
