--- a/dbt/models/staging/lego_raw/stg_lego_raw__brick_insights_ratings_reviews.yaml
+++ b/dbt/models/staging/lego_raw/stg_lego_raw__brick_insights_ratings_reviews.yaml
@@ -1,11 +1,11 @@
 version: 2
 
 models:
-  - name: base_lego_raw__brick_insights_reviews_data
+  - name: stg_lego_raw__brick_insights_ratings_reviews
     description: >
       This model contains review and rating data about LEGO sets from
       Brick Insights, which aggregates these from across the web.
-      This model has data for sets from the year 2000 until 2024.
+      This model has data for sets for all years available (1949-2024).
 
     columns:
       - name: set_num
@@ -34,3 +34,6 @@ models:
 
       - name: author_name
         description: The name of the review's author
+        
+      - name: fetched_at
+        description: Timestamp of when the data was fetched from the API
