--- a/dbt/models/staging/lego_raw/stg_lego_raw__brick_insights_reviews.yaml
+++ b/dbt/models/staging/lego_raw/stg_lego_raw__brick_insights_reviews.yaml
@@ -1,11 +1,11 @@
 version: 2
 
 models:
-  - name: base_lego_raw__brick_insights_reviews_data_pre_2000
+  - name: stg_lego_raw__brick_insights_reviews
     description: >
       This model contains review and rating data about LEGO sets from
       Brick Insights, which aggregates these from across the web.
-      This model has data for sets from the year 1949 until 1999.
+      This model has data for sets for all years available (1949-2024).
 
     columns:
       - name: set_num
