--- a/dbt/models/staging/lego_raw/base/base_lego_raw__brick_insights_ratings_reviews_pre_2000.yaml
+++ b/dbt/models/staging/lego_raw/base/base_lego_raw__brick_insights_ratings_reviews_pre_2000.yaml
@@ -1,11 +1,11 @@
 version: 2
 
 models:
-  - name: stg_lego_raw__brick_insights_reviews_data
+  - name: base_lego_raw__brick_insights_ratings_reviews_pre_2000
     description: >
       This model contains review and rating data about LEGO sets from
       Brick Insights, which aggregates these from across the web.
-      This model has data for sets for all years available (1949-2024).
+      This model has data for sets from the year 1949 until 1999.
 
     columns:
       - name: set_num
@@ -31,3 +31,9 @@ models:
       - name: rating_converted
         description: >
           The rating of the set converted to a 100 point scale.
+
+      - name: author_name
+        description: The name of the review's author
+
+      - name: fetched_at
+        description: Timestamp of when the data was fetched from the API
