fix model name in yaml and add materialization specifications

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -48,3 +48,7 @@ models:
     # Applies to all files under models/example/
     staging:
       +materialized: view
+    intermediate:
+      +materialized: ephemeral
+    marts:
+      +materialized: table
