update docs, clean up files and add env vars

--- a/airflow/.env
+++ b/airflow/.env
@@ -1,1 +1,5 @@
 AIRFLOW_UID=50000
+# TODO: Change the following variables to your own values
+GCP_PROJECT_ID='dtc-de-kilian'
+GCP_GCS_BUCKET='lego-bucket-dtc-de-kilian'
+GCP_DATASET_ID='lego_raw'
