--- a/dbt/models/staging/lego_raw/stg_lego_raw__lego_aggregated_data.yaml
+++ b/dbt/models/staging/lego_raw/stg_lego_raw__lego_aggregated_data.yaml
@@ -76,8 +76,8 @@ models:
       - name: tags
         description: List of Brickset.com assigned set tags.
 
-      - name: last_updated_at
-        description: Date and time of the last update of the data in Brickset.com in ISO 8601 format.
+      - name: last_updated_date
+        description: Date of the last update of the data in Brickset.com.
 
       - name: retail_price_check_pln_url
         description: URL where retail price in PLN was downloaded from.
